[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/nebula/Nebulas-5-v1-1.png" type="Texture" id=1]
[ext_resource path="res://assets/nebula/Nebulas-3-v1-1.png" type="Texture" id=2]
[ext_resource path="res://assets/nebula/Nebulas-2-v1-1.png" type="Texture" id=3]
[ext_resource path="res://prefabs/PlayerWhale.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefabs/sectors/TutorialSector.gd" type="Script" id=5]
[ext_resource path="res://assets/nebula/Nebulas-4-v1-1.png" type="Texture" id=6]
[ext_resource path="res://prefabs/sectors/tutorial-steps/TutorialStepper.gd" type="Script" id=7]
[ext_resource path="res://prefabs/sectors/tutorial-steps/Step04.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/fonts/Text-10-O1.tres" type="DynamicFont" id=9]
[ext_resource path="res://prefabs/sectors/tutorial-steps/Step05.tscn" type="PackedScene" id=10]
[ext_resource path="res://prefabs/sectors/tutorial-steps/Step02.tscn" type="PackedScene" id=11]
[ext_resource path="res://prefabs/sectors/tutorial-steps/Step01.tscn" type="PackedScene" id=12]
[ext_resource path="res://prefabs/sectors/tutorial-steps/Step03.tscn" type="PackedScene" id=13]
[ext_resource path="res://prefabs/sectors/tutorial-steps/Step00.tscn" type="PackedScene" id=14]
[ext_resource path="res://prefabs/sectors/tutorial-steps/Step06.tscn" type="PackedScene" id=16]

[node name="TutorialScene" type="Node2D"]
script = ExtResource( 5 )

[node name="DeathInfo" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="HBoxContainer" type="HBoxContainer" parent="DeathInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftBox" type="MarginContainer" parent="DeathInfo/HBoxContainer"]
margin_right = 478.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 32
custom_constants/margin_top = 24
custom_constants/margin_left = 24

[node name="InfoEnter-02" type="VBoxContainer" parent="DeathInfo/HBoxContainer/LeftBox"]
visible = false
margin_left = 24.0
margin_top = 24.0
margin_right = 446.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24

[node name="InfoLabel" type="Label" parent="DeathInfo/HBoxContainer/LeftBox/InfoEnter-02"]
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
show_behind_parent = true
margin_right = 422.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 9 )

[node name="InfoExit-02" type="VBoxContainer" parent="DeathInfo/HBoxContainer/LeftBox"]
margin_left = 24.0
margin_top = 24.0
margin_right = 446.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24

[node name="InfoLabel" type="Label" parent="DeathInfo/HBoxContainer/LeftBox/InfoExit-02"]
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
show_behind_parent = true
margin_right = 422.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 9 )
text = "You allowed them to hit the head of your
whale. While it can take a beating, hits to the head can lead to incapacitation.

If a whale gets incapacitated the safety 
system will jump your pod out but the whale and all euipment will be lost."
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="DeathInfo/HBoxContainer/LeftBox/InfoExit-02"]
margin_top = 140.0
margin_right = 422.0
margin_bottom = 166.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="Box" type="MarginContainer" parent="DeathInfo/HBoxContainer/LeftBox/InfoExit-02/HBoxContainer"]
margin_right = 32.0
margin_bottom = 26.0
rect_min_size = Vector2( 32, 0 )
mouse_filter = 2

[node name="DeathBtn" type="Button" parent="DeathInfo/HBoxContainer/LeftBox/InfoExit-02/HBoxContainer"]
unique_name_in_owner = true
show_behind_parent = true
margin_left = 48.0
margin_right = 109.0
margin_bottom = 26.0
size_flags_horizontal = 8
size_flags_vertical = 3
disabled = true
text = "Next"

[node name="RightBox" type="VBoxContainer" parent="DeathInfo/HBoxContainer"]
margin_left = 482.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeathTimer" type="Timer" parent="DeathInfo"]
unique_name_in_owner = true
wait_time = 1.6

[node name="Nebula" type="Node2D" parent="."]
z_index = -980

[node name="Nebulas-2-v1-1" type="Sprite" parent="Nebula"]
modulate = Color( 0.752941, 0.752941, 0.752941, 0.25098 )
position = Vector2( 1290, 784 )
texture = ExtResource( 3 )

[node name="Nebulas-4-v1-1" type="Sprite" parent="Nebula"]
modulate = Color( 0.752941, 0.752941, 0.752941, 0.25098 )
position = Vector2( -594, -132 )
rotation = 3.14159
texture = ExtResource( 6 )

[node name="Nebulas-5-v1-1" type="Sprite" parent="Nebula"]
modulate = Color( 0.752941, 0.752941, 0.752941, 0.25098 )
position = Vector2( -100, 542 )
rotation = 3.14159
texture = ExtResource( 1 )

[node name="Nebulas-3-v1-1" type="Sprite" parent="Nebula"]
modulate = Color( 0.752941, 0.752941, 0.752941, 0.25098 )
position = Vector2( 1051, 142 )
texture = ExtResource( 2 )
flip_v = true

[node name="Stepper" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource( 7 )
step_a = ExtResource( 14 )
step_b = ExtResource( 12 )
step_c = ExtResource( 11 )
step_d = ExtResource( 13 )
step_e = ExtResource( 8 )
step_f = ExtResource( 10 )
step_g = ExtResource( 16 )

[node name="PlayerWhale" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true
modulate = Color( 0.65098, 0.65098, 0.65098, 1 )
position = Vector2( 230, 280 )

[connection signal="pressed" from="DeathInfo/HBoxContainer/LeftBox/InfoExit-02/HBoxContainer/DeathBtn" to="." method="_on_next_pressed"]
